--- a/templates/Program.html
+++ b/templates/Program.html
@@ -79,18 +79,12 @@
 
      <!-- bradcam_area -->
      <div class="bradcam_area">
-        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay" style="background-image: url('/static/img/banner/footer_banner.png');">
+        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay" style="background-image: url('/static/img/banner/banner.png');">
               <div class="container">
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                            <div class="shape_1 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                                <img src="static/img/shape/shape_1.svg" alt="">
-                            </div>
-                            <div class="shape_2 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".3s">
-                                <img src="static/img/shape/shape_2.svg" alt="">
-                            </div>
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">EVENTS</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Events</h3>
                           </div>
                        </div>
                     </div>
@@ -183,7 +177,7 @@
                                     <img src="static/img/performer/bridge.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>(1)Engineering the Future : Bridge Edition</h4>
+                                    <h4>Engineering the Future: Bridge Edition</h4>
                                     <span>Engineer your way to victory in our bridge-building challenge! Construct a sturdy bridge using provided materials and showcase your engineering skills. Work with your team to create a structure that can withstand the weight test. Join us at TAMS 2024 to put your skills to the test!
                                         <br><br>&#x2022;Number of participants - 180
                                         <br>&#x2022;Number of teams - 60
@@ -198,7 +192,7 @@
                                     <img src="static/img/performer/CAR.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>(1)Engineering the Future : Car Edition</h4>
+                                    <h4>Engineering the Future: Car Edition</h4>
                                     <span>Get ready to rev up your creativity! Join our car-making workshop and design your own unique car. Use a variety of materials to bring your design to life, and then test it in a thrilling competition. Show off your innovation and race to victory at TAMS 2024!
                                         <br><br>&#x2022;Number of participants - 240
                                         <br>&#x2022;Number of teams - 60
@@ -213,7 +207,7 @@
                                     <img src="static/img/performer/AeroQuest.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>(3)Engineering the Future : AeroQuest (Rocketry)</h4>
+                                    <h4>Engineering the Future: AeroQuest (Rocketry)</h4>
                                     <span>Embark on a journey to the cosmos with our thrilling rocketry adventure! Design and launch your own rockets, learn about the wonders of space, and compete in exciting challenges. Join us for an out-of-this-world experience at TAMS 2024!
                                         <br><br>&#x2022;Number of participants - 216
                                         <br>&#x2022;Number of teams - 72
@@ -237,14 +231,14 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-6 col-md-6" id="RoboChem">
+                        <div class="col-lg-6 col-md-6" id="TechToxin">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
                                     <img src="static/img/performer/tektoxin.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Tech Toxin</h4>
-                                    <span> Put your chemistry knowledge to the test in the RoboChem Conundrum! Solve chemical puzzles, unlock clues, and escape before time runs out in this thrilling escape room experience. Gather your friends, collaborate, and use your chemistry skills to outsmart the room. Can you unravel the mysteries and escape in time?
+                                    <span> Put your chemistry knowledge to the test in the Tech Toxin arena! Solve chemical puzzles, unlock clues, and escape before time runs out in this thrilling escape room experience. Gather your friends, collaborate, and use your chemistry skills to outsmart the room. Can you unravel the mysteries and escape in time?
 
                                         <br><br>&#x2022;Number of participants - 240
                                         <br>&#x2022;Number of teams - 60
@@ -253,7 +247,7 @@
                             </div>
                         </div>
                         
-                        <div class="col-lg-6 col-md-6" id="Shark">
+                        <div class="col-lg-6 col-md-6" id="SharkTank">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
                                     <img src="static/img/performer/shark.png" alt="">
@@ -276,11 +270,13 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Game of Intellects</h4>
-                                    <span> Description
-
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                    <span> Teams wanting to race in GOI/ Battle of the Intellects by unlocking the power of your
+                                        collective minds through quiz twisters followed by puzzles that can give your minds a spin and finally leading
+                                        you to the inner circle where you fight your way through intellectual challenges with a twist to earn your
+                                        place as the Ultimate Champions.
+                                        <br><br>&#x2022;Number of participants - 700
+                                        <br>&#x2022;Number of teams - 700
+                                        <br>&#x2022;Number of people in one team - 1</span>
                                 </div>
                             </div>
                         </div>
@@ -292,8 +288,10 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Gizmo Galore</h4>
-                                    <span> Description
-
+                                    <span> Fiction is stranger than the Truth. Work as a team to bring together the ‘scientific
+                                        truth’ and fiction in Gizmo Galore. The event will comprise of 2 rounds of
+                                        1. Mind- Tickling quiz to test your design skills. 2. Creation of the idea: through a luck spin where destiny
+                                        will choose if you have to draw / present / enact your idea
                                         <br><br>&#x2022;Number of participants - 
                                         <br>&#x2022;Number of teams - 
                                         <br>&#x2022;Number of people in one team - </span>
@@ -304,11 +302,15 @@
                         <div class="col-lg-6 col-md-6" id="Line">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
+                                    <img src="static/img/performer/COCBLUE.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Whose Line is it Anyways? Mine...</h4>
-                                    <span> Description
+                                    <h4>Conquerors of Controversy</h4>
+                                    <span> Showcase your spontaneity, knowledge, and oratory skills in the event "Conquerors of Controversy."
+
+                                        Speak on a topic for a minute, demonstrating your quick thinking and effective communication skills.
+                                        Engage in a debate round where you choose a side on a given topic and defend it passionately.
+                                        Step into the arena where words are your weapons, and only the sharpest minds prevail. Are you ready to conquer the controversy and prove your rhetorical prowess?
 
                                         <br><br>&#x2022;Number of participants - 
                                         <br>&#x2022;Number of teams - 
@@ -316,23 +318,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-lg-6 col-md-6" id="Tale">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                                <div data-tilt class="thumb">
-                                    <img src="static/img/performer/3.png" alt="">
-                                </div>
-                                <div class="performer_heading">
-                                    <h4>Tale of Science</h4>
-                                    <span> Description
-
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
-                                </div>
-                            </div>
-                        </div>
-
                         <div class="col-lg-6 col-md-6" id="Cipher">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
@@ -403,7 +388,7 @@
                                     <h4>Investor's Edge</h4>
                                     <span> Welcome to The Investor's Edge – a fun, interactive gamified event that teaches strategic investing, risk management, and the magic of compounding!
 
-                                        <br><br>&#x2022;Number of participants - 
+                                        <br>
                                         <br>&#x2022;Number of teams - 50
                                         <br>&#x2022;Number of people in one team - Solo or 2-4 per team </span>
                                 </div>
@@ -555,7 +540,7 @@
                 </div>
                 <div class="single_info">
                     <span>Email:</span>
-                    <p style="font-size:15px;margin-left: 2%;">theamateurscientist@pes.edu</p>
+                    <p style="font-size:15px;margin-left: 2%;">tams@pes.edu</p>
                 </div>
             </div>
         </div>
@@ -599,15 +584,36 @@
                     </div>
                     <div class="col-md-3" style="border-left: 1px solid white;">
                         <div class="footer_widget" >
-                            <h3 class="kingster-widget-title" >Events</h3>
+                            <h3 class="kingster-widget-title" >Events - TAS</h3>
                             <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                <li><a href="#narrativeNexus">Narrative Nexus</a></li>
-                                <li><a href="#Innovate&Automate">Innovate & Automate</a></li>
-                                <li><a href="#HackaScratch">HackaScratch</a></li>
-                                <li><a href="#Jeopardy">Jeopardy</a></li>
-                                <li><a href="#EnggFuture">Engineering the Future</a></li>
-                                <li><a href="#ScienceSymposium">Science Symposium</a></li>
-                                <li><a href="#RoboChem">RoboChem Conundrum</a></li>
+                                <li><a href="/events#narrativeNexus">Narrative Nexus</a></li>
+                                <li><a href="/events#Innovate&Automate">Innovate & Automate</a></li>
+                                <li><a href="/events#HackaScratch">HackaScratch</a></li>
+                                <li><a href="/events#Jeopardy">Jeopardy</a></li>
+                                <li><a href="/events#EnggFuture">Engineering the Future</a></li>
+                                <li><a href="/events#ScienceSymposium">Science Symposium</a></li>
+                                <li><a href="/events#TechToxin">Tech Toxin</a></li>
+                                <li><a href="/events#SharkTank">Shark Tank</a></li>
+                                <li><a href="/events#GOI">Game Of Intellects</a></li>
+                                <li><a href="/events#Gizmo">Gizmo Galore</a></li>
+                                <li><a href="/events#Line">Whose Line is it Anyways? Mine...</a></li>
+                                <li><a href="/events#Cipher">Cipher-Quest</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3" style="border-left: 1px solid white;">
+                        <div class="footer_widget">
+                            <h3 class="kingster-widget-title">Events - TAM</h3>
+                            <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
+                                <li><a href="/events#Monopoly">Monopoly Madness</a></li>
+                                <li><a href="/events#Sherlock">Operation Sherlock</a></li>
+                                <li><a href="/events#Hand">Hidden Hand</a></li>
+                                <li><a href="/events#Edge">Investor's Edge</a></li>
+                                <li><a href="/events#Eureka">Eureka Expo</a></li>
+                                <li><a href="/events#Chamber">Chamber of Reflection</a></li>
+                                <li><a href="/events#Entertainer">The Entertainer</a></li>
+                                <li><a href="/events#Ruins">Ruins to Riches</a></li>
+                                <li><a href="/events#Market">Market Marvels</a></li>
                             </ul>
                         </div>
                     </div>
