--- a/templates/about.html
+++ b/templates/about.html
@@ -74,18 +74,12 @@
 
      <!-- bradcam_area -->
      <div class="bradcam_area">
-        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay" style="background-image: url('/static/img/banner/footer_banner.png');">
+        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay" style="background-image: url('/static/img/banner/banner.png');">
               <div class="container">
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                            <div class="shape_1 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                                <img src="static/img/shape/shape_1.svg" alt="">
-                            </div>
-                            <div class="shape_2 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".3s">
-                                <img src="static/img/shape/shape_2.svg" alt="">
-                            </div>
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">About &nbsp PESU </h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">About &nbsp PESU</h3>
                           </div>
                        </div>
                     </div>
@@ -232,7 +226,7 @@
             </div>
             <div class="single_info">
                 <span>Email:</span>
-                <p style="font-size:15px;margin-left: 2%;">theamateurscientist@pes.edu</p>
+                <p style="font-size:15px;margin-left: 2%;">tams@pes.edu</p>
             </div>
         </div>
     </div>
@@ -267,16 +261,16 @@
                         <h3 class="kingster-widget-title">Quick Links</h3>
                         <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
                             <li><a href="/">Home</a></li>
-                            <li><a href="#">About PESU</a></li>
+                            <li><a href="/aboutPESU">About PESU</a></li>
                             <li><a href="/about">History</a></li>
-                            <li><a href="/events">Events</a></li>
+                            <li><a href="#">Events</a></li>
 
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-3" style="border-left: 1px solid white;">
                     <div class="footer_widget" >
-                        <h3 class="kingster-widget-title" >Events</h3>
+                        <h3 class="kingster-widget-title" >Events - TAS</h3>
                         <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
                             <li><a href="/events#narrativeNexus">Narrative Nexus</a></li>
                             <li><a href="/events#Innovate&Automate">Innovate & Automate</a></li>
@@ -284,7 +278,28 @@
                             <li><a href="/events#Jeopardy">Jeopardy</a></li>
                             <li><a href="/events#EnggFuture">Engineering the Future</a></li>
                             <li><a href="/events#ScienceSymposium">Science Symposium</a></li>
-                            <li><a href="/events#RoboChem">RoboChem Conundrum</a></li>
+                            <li><a href="/events#TechToxin">Tech Toxin</a></li>
+                            <li><a href="/events#SharkTank">Shark Tank</a></li>
+                            <li><a href="/events#GOI">Game Of Intellects</a></li>
+                            <li><a href="/events#Gizmo">Gizmo Galore</a></li>
+                            <li><a href="/events#Line">Whose Line is it Anyways? Mine...</a></li>
+                            <li><a href="/events#Cipher">Cipher-Quest</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3" style="border-left: 1px solid white;">
+                    <div class="footer_widget">
+                        <h3 class="kingster-widget-title">Events - TAM</h3>
+                        <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
+                            <li><a href="/events#Monopoly">Monopoly Madness</a></li>
+                            <li><a href="/events#Sherlock">Operation Sherlock</a></li>
+                            <li><a href="/events#Hand">Hidden Hand</a></li>
+                            <li><a href="/events#Edge">Investor's Edge</a></li>
+                            <li><a href="/events#Eureka">Eureka Expo</a></li>
+                            <li><a href="/events#Chamber">Chamber of Reflection</a></li>
+                            <li><a href="/events#Entertainer">The Entertainer</a></li>
+                            <li><a href="/events#Ruins">Ruins to Riches</a></li>
+                            <li><a href="/events#Market">Market Marvels</a></li>
                         </ul>
                     </div>
                 </div>
