--- a/templates/index.html
+++ b/templates/index.html
@@ -80,27 +80,49 @@
     <!-- slider_area_start -->
 <!-- slider_area_start -->
 <!-- slider_area_start -->
-<div class="slider_area">
-    <div class="single_slider d-flex align-items-center" style="background-image: url('/static/img/logo_png.png');">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-xl-12">
-                    <div class="slider_text text-center">
-                        <div class="shape_1 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                            <img src="static/img/shape/shape_1.svg" alt="">
+    <!-- <div class="slider_area">
+        <div class="single_slider  d-flex align-items-center slider_bg_1 overlay">
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-xl-12">
+                        <div class="slider_text text-center">
+                            <div class="shape_1 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
+                                <img src="img/shape/shape_1.svg" alt="">
+                            </div>
+                            <div class="shape_2 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".2s">
+                                <img src="img/shape/shape_2.svg" alt="">
+                            </div>
+                            <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">31st August 2024</span>
+                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">TAMS 2024</h3>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">PES University, RR Campus</p>
                         </div>
-                        <div class="shape_2 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".2s">
-                            <img src="static/img/shape/shape_2.svg" alt="">
-                        </div>
-                        <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">31st August 2024</span>
-                        <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">TAMS 2024</h3>
-                        <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">PES University, RR Campus</p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    </div> -->
+    <div class="bradcam_area">
+        <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay" style="background-image: url('/static/img/banner/banner.png');">
+              <div class="container">
+                    <div class="row align-items-center justify-content-center">
+                       <div class="col-xl-12">
+                          <div class="bradcam_text text-center">
+                                <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">‎ ‎ ‎</p>
+                                <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">31st August 2024</span>
+                                <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">TAMS 2024</h3>
+                                <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">PES University, RR Campus</h5>
+                                <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">‎ ‎ ‎</p>
+                                <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">‎ ‎ ‎</p>
+                                <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">‎ ‎ ‎ </h5>
+                                <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">‎ ‎ ‎ </h5>
+                                <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">‎ ‎ ‎ </h5>
+
+                          </div>
+                       </div>
+                    </div>
+              </div>
+           </div>
+     </div>
 <!-- slider_area_end -->
 <div class="brand_area black_bg">
     <div class="container">
@@ -163,7 +185,7 @@
                         TAMS: Where Science Meets Fun and Innovation!</h3>
     
                     
-                    <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">Step into The Amateur Manager and Scientist (TAMS), where passion meets innovation! Join us for an exciting journey through the realms of science and management, designed to inspire and challenge amateur enthusiasts. This year, we're bringing together the brightest minds from grades 8 to 12 from various institutions across India. Get ready for an unforgettable experience filled with learning, competition, and collaboration.<br>
+                    <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">Step into The Amateur Managers and Scientists (TAMS), where passion meets innovation! Join us for an exciting journey through the realms of science and management, designed to inspire and challenge amateur enthusiasts. This year, we're bringing together the brightest minds from grades 8 to 12 from various institutions across India. Get ready for an unforgettable experience filled with learning, competition, and collaboration.<br>
 
                         TAMS is more than just an event—it's a celebration of creativity and ingenuity. Engage in thought-provoking discussions, participate in hands-on workshops, and showcase your talents in our various competitions. Connect with like-minded peers, mentors, and industry experts who share your passion for science and management.<br>
                         
@@ -281,7 +303,7 @@
             </div>
             <div class="single_info">
                 <span>Email:</span>
-                <p style="font-size:15px;margin-left: 2%;">theamateurscientist@pes.edu</p>
+                <p style="font-size:15px;margin-left: 2%;">tams@pes.edu</p>
             </div>
         </div>
     </div>
@@ -316,16 +338,16 @@
                         <h3 class="kingster-widget-title">Quick Links</h3>
                         <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
                             <li><a href="/">Home</a></li>
-                            <li><a href="#">About PESU</a></li>
+                            <li><a href="/aboutPESU">About PESU</a></li>
                             <li><a href="/about">History</a></li>
-                            <li><a href="/events">Events</a></li>
+                            <li><a href="#">Events</a></li>
 
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-3" style="border-left: 1px solid white;">
                     <div class="footer_widget" >
-                        <h3 class="kingster-widget-title" >Events</h3>
+                        <h3 class="kingster-widget-title" >Events - TAS</h3>
                         <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
                             <li><a href="/events#narrativeNexus">Narrative Nexus</a></li>
                             <li><a href="/events#Innovate&Automate">Innovate & Automate</a></li>
@@ -333,7 +355,28 @@
                             <li><a href="/events#Jeopardy">Jeopardy</a></li>
                             <li><a href="/events#EnggFuture">Engineering the Future</a></li>
                             <li><a href="/events#ScienceSymposium">Science Symposium</a></li>
-                            <li><a href="/events#RoboChem">RoboChem Conundrum</a></li>
+                            <li><a href="/events#TechToxin">Tech Toxin</a></li>
+                            <li><a href="/events#SharkTank">Shark Tank</a></li>
+                            <li><a href="/events#GOI">Game Of Intellects</a></li>
+                            <li><a href="/events#Gizmo">Gizmo Galore</a></li>
+                            <li><a href="/events#Line">Whose Line is it Anyways? Mine...</a></li>
+                            <li><a href="/events#Cipher">Cipher-Quest</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3" style="border-left: 1px solid white;">
+                    <div class="footer_widget">
+                        <h3 class="kingster-widget-title">Events - TAM</h3>
+                        <ul class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
+                            <li><a href="/events#Monopoly">Monopoly Madness</a></li>
+                            <li><a href="/events#Sherlock">Operation Sherlock</a></li>
+                            <li><a href="/events#Hand">Hidden Hand</a></li>
+                            <li><a href="/events#Edge">Investor's Edge</a></li>
+                            <li><a href="/events#Eureka">Eureka Expo</a></li>
+                            <li><a href="/events#Chamber">Chamber of Reflection</a></li>
+                            <li><a href="/events#Entertainer">The Entertainer</a></li>
+                            <li><a href="/events#Ruins">Ruins to Riches</a></li>
+                            <li><a href="/events#Market">Market Marvels</a></li>
                         </ul>
                     </div>
                 </div>
