--- a/templates/index.html
+++ b/templates/index.html
@@ -61,8 +61,8 @@
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="buy_tkt">
-                                    <div class="book_btn d-none d-lg-block">
-                                        <a href="#">REGISTER NOW</a>
+                                    <div class="book_btn">
+                                        <a href="https://forms.gle/DVBJk6t1zQarWdXs7" class="d-none d-lg-block">REGISTER NOW</a>
                                     </div>
                                 </div>
                             </div>
