--- a/templates/Program.html
+++ b/templates/Program.html
@@ -129,7 +129,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Innovate & Automate (ROBOTICS)</h4>
-                                    <span>Dive into our hands-on workshop and create exciting electrical projects with simple, everyday components!
+                                    <span>Dive into our hands-on workshop and create exciting electrical projects with simple, everyday components! Experience the thrill of building and innovating with expert guidance.
 
                                         <br><br>&#x2022;Number of participants - 342
                                         <br>&#x2022;Number of teams - 114
@@ -254,11 +254,18 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Shark Tank</h4>
-                                    <span> Description
+                                    <span> 
+                                        Join us for an exciting event inspired by Shark Tank! Teams will compete in rounds that challenge their creativity, persuasion skills, and entrepreneurial flair:
+                                        
+                                        Elevator Pitch: Craft a compelling pitch to grab attention in seconds.
+                                        Networking: Build crucial connections to support your entrepreneurial journey.
+                                        Crisis Management: Navigate unexpected challenges with quick thinking.
+                                        Final Investment Round: Pitch to judges for a chance to win prizes and acclaim.
+                                        Get ready to witness innovation in action and entrepreneurial spirit in full swing!
 
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                        <br><br>&#x2022;Number of participants -500 
+                                        <br>&#x2022;Number of teams - 125 
+                                        <br>&#x2022;Number of people in one team - 3-4 </span>
                                 </div>
                             </div>
                         </div>
@@ -287,14 +294,17 @@
                                     <img src="static/img/performer/gizmo.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Gizmo Galore</h4>
-                                    <span> Fiction is stranger than the Truth. Work as a team to bring together the ‘scientific
-                                        truth’ and fiction in Gizmo Galore. The event will comprise of 2 rounds of
-                                        1. Mind- Tickling quiz to test your design skills. 2. Creation of the idea: through a luck spin where destiny
-                                        will choose if you have to draw / present / enact your idea
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                    <h4>Rube’s Gizmo Galore</h4>
+                                    <span> F
+                                        Explore creativity and innovation at Rube’s Gizmo Galore! Join us for:
+
+                                        Mind-Tickling Quiz: Test design skills and creativity.
+                                        Idea Creation: Brainstorm and design imaginative machines.
+                                        Final Construction: Build and compete with provided materials.
+                                        Showcase your teamwork and ingenuity in a fun, competitive environment!
+                                        <br><br>&#x2022;Number of participants -  400  
+                                        <br>&#x2022;Number of teams - sorted during the event based on performance 
+                                        <br>&#x2022;Number of people in one team - sorted during the event based on performance </span>
                                 </div>
                             </div>
                         </div>
@@ -312,24 +322,9 @@
                                         Engage in a debate round where you choose a side on a given topic and defend it passionately.
                                         Step into the arena where words are your weapons, and only the sharpest minds prevail. Are you ready to conquer the controversy and prove your rhetorical prowess?
 
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6" id="Cipher">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                                <div data-tilt class="thumb">
-                                    <img src="static/img/performer/sherlock.png" alt="">
-                                </div>
-                                <div class="performer_heading">
-                                    <h4>Cipher-Quest</h4>
-                                    <span> Description
-
-                                        <br><br>&#x2022;Number of participants - 
-                                        <br>&#x2022;Number of teams - 
-                                        <br>&#x2022;Number of people in one team - </span>
+                                        <br><br>&#x2022;Number of participants - 320
+                                        <br>&#x2022;Number of teams - 320
+                                        <br>&#x2022;Number of people in one team - 1</span>
                                 </div>
                             </div>
                         </div>
@@ -341,7 +336,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Monopoly Madness</h4>
-                                    <span> Feel the thrill in Monopoly Madness: Cash in or crash out!
+                                    <span> Experience the thrill of Monopoly Madness: Cash in or crash out in this high-stakes event! Compete against others as you strategize, negotiate, and navigate your way through the twists and turns of this classic game. Grab properties, build empires, and outsmart your opponents to emerge victorious. Join us for a gaming experience like no other, where every decision counts and fortunes can change in an instant!
                                         <br>
                                         <br>&#x2022;Number of teams - 100-150
                                         <br>&#x2022;Number of people in one team - 3-5 per team</span>
@@ -450,7 +445,8 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Ruins to Riches</h4>
-                                    <span> Bid, strategize, and rebuild a city in "Ruins to Riches"!
+                                    <span> B
+                                        Step into the world of "Ruins to Riches"! Bid strategically, negotiate tactfully, and rebuild a city from ancient ruins to a thriving metropolis. Compete against others to create the most prosperous urban landscape. Join us for a dynamic event where every decision shapes the future of your city!
 
                                         <br>
                                         <br>&#x2022;Number of teams - 20-25 
