--- a/templates/index.html
+++ b/templates/index.html
@@ -211,7 +211,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-12">
                 <div class="section_title text-center mb-80">
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Event Highlight</h3>
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Event Highlights</h3>
                     <div class="video_container wow fadeInUp " data-wow-duration="1s" data-wow-delay=".4s" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;background:#000;">
                         <iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/6j0ssb_ZJos?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
                     </div>                     
