--- a/templates/about.html
+++ b/templates/about.html
@@ -95,7 +95,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >About Founder</h3>
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >About the Founder</h3>
                         <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >In 1972, PES was founded in Bangalore with just over 40 students. Today, we have more than 18,000 students spread across four different campuses in Karnataka and Andhra Pradesh.</p>
                     </div>
                 </div>
