--- a/templates/about.html
+++ b/templates/about.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-5 col-md-6">
                     <div class="about_info pl-68">
                         <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Perseverance Excellence & Service</h4>
-                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">It is our unwavering commitment to the highest quality education that has sped us along on this journey. I would also like to thank the generations of parents who have entrusted us with the care and education of their children.</p><p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"> It is their faith and belief in the PES values – Perseverance, Excellence and Service – that has helped us come this far. I believe that education has the most critical role to play in the progress of a nation. We realize that our students represent the future of our society and we take our responsibility seriously. </p>
+                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">It is our unwavering commitment to the highest quality education that has sped us along on this journey. I would also like to thank the generations of parents who have entrusted us with the care and education of their children.</p><p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"> It is their faith and belief in the PES values – Perseverance, Excellence and Service – that has helped us come this far. I believe that education has a pivotal role to play in the progress of a nation. We realize that our students represent the future of our society and we take our responsibility seriously. </p>
                     </div>
                 </div>
 
