--- a/templates/index.html
+++ b/templates/index.html
@@ -354,13 +354,12 @@
                             <li><a href="/events#HackaScratch">HackaScratch</a></li>
                             <li><a href="/events#Jeopardy">Jeopardy</a></li>
                             <li><a href="/events#EnggFuture">Engineering the Future</a></li>
-                            <li><a href="/events#ScienceSymposium">Science Symposium</a></li>
+                            <li><a href="/events#ScienceSymposium">Science Carnival</a></li>
                             <li><a href="/events#TechToxin">Tech Toxin</a></li>
                             <li><a href="/events#SharkTank">Shark Tank</a></li>
                             <li><a href="/events#GOI">Game Of Intellects</a></li>
                             <li><a href="/events#Gizmo">Gizmo Galore</a></li>
-                            <li><a href="/events#Line">Whose Line is it Anyways? Mine...</a></li>
-                            <li><a href="/events#Cipher">Cipher-Quest</a></li>
+                            <li><a href="/events#Conquerors">Conquerors of Controversy</a></li>
                         </ul>
                     </div>
                 </div>
