--- a/templates/index.html
+++ b/templates/index.html
@@ -340,6 +340,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="/aboutPESU">About PESU</a></li>
                             <li><a href="/about">History</a></li>
+                                <li><a href="https://forms.gle/ormi3s4MR5g2a6Gd6">Register</a></li>
                             <li><a href="#">Events</a></li>
 
                         </ul>
